data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1926.wast
;; 7. **Test Out-of-Bounds Relative Label in `br_table`**:    - **Description**: Use a label reference in `br_table` that is beyond the deepest control structure.    - **Reasoning**: Ensures proper indexing and error handling for invalid label references.    - **Edge Relation**: Assesses label indexing mechanism, analogous to `br_if` label misreferences.

(assert_invalid
  (module
    (func $out_of_bounds_label
      (block (br_table 2 (i32.const 0)))
    )
  )
  "unknown label"
)